deploy/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fisiovision-api
  labels: { app: fisiovision-api }
spec:
  selector: { app: fisiovision-api }
  ports:
    - { name: http, port: 80, targetPort: http }
